force-app/main/default/objects/Opportunity/fields/Front_pdf__c.field-meta.xml
<CustomField>
    <fullName>Front_pdf__c</fullName>
    <label>Front PDF</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>