force-app/main/default/objects/Opportunity/fields/fState__c.field-meta.xml
<CustomField>
    <fullName>fState__c</fullName>
    <formula>Branch_Object__r.State__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fState</label>
    <type>Text</type>
</CustomField>