force-app/main/default/objects/Opportunity/fields/Gift_Card_Apply_Towards_Payment__c.field-meta.xml
<CustomField>
    <fullName>Gift_Card_Apply_Towards_Payment__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Gift Card Apply Towards Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>