force-app/main/default/objects/Opportunity/fields/Gift_Card_Initial_Payment__c.field-meta.xml
<CustomField>
    <fullName>Gift_Card_Initial_Payment__c</fullName>
    <formula>Amount +  Setup_Fee__c- Gift_Card_Apply_Towards_Payment__c</formula>
    <label>Gift Card Initial Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>