force-app/main/default/objects/Opportunity/fields/Hot_Leads_Portal_Complete_Date_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Hot_Leads_Portal_Complete_Date_Stamp__c</fullName>
    <label>Hot Leads Portal Complete Date Stamp</label>
    <type>Date</type>
</CustomField>