force-app/main/default/objects/Opportunity/fields/Incontact_Port__c.field-meta.xml
<CustomField>
    <fullName>Incontact_Port__c</fullName>
    <label>Incontact Port</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Plivo # forwarded to buisiness</fullName>
                <default>true</default>
                <label>Plivo # forwarded to buisiness</label>
            </value>
            <value>
                <fullName>Plivo # forwarded to Incontact</fullName>
            </value>
            <value>
                <fullName>Verified Port to Incotact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>