force-app/main/default/objects/Opportunity/fields/Initial_Pay_Rcvd_Date_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Initial_Pay_Rcvd_Date_Stamp__c</fullName>
    <label>Initial Pay Rcvd Date Stamp</label>
    <type>Date</type>
</CustomField>