force-app/main/default/objects/Opportunity/fields/Intacct_Entity__c.field-meta.xml
<CustomField>
    <fullName>Intacct_Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Intacct Entity</label>
    <referenceTo>Intacct_Entity__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>