force-app/main/default/objects/Opportunity/fields/Last_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_Date__c</fullName>
    <label>Last ModifiedDate</label>
    <type>DateTime</type>
</CustomField>