force-app/main/default/objects/Opportunity/fields/LQ_AvalonFilterAuthNum__c.field-meta.xml
<CustomField>
    <fullName>LQ_AvalonFilterAuthNum__c</fullName>
    <label>LQ AvalonFilterAuthNum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>