force-app/main/default/objects/Opportunity/fields/Mailing_Address_Same_As_Site_Address__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Address_Same_As_Site_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mailing Address Same As Site Address</label>
    <type>Checkbox</type>
</CustomField>