force-app/main/default/objects/Opportunity/fields/Mike_Austin_CB_Stage__c.field-meta.xml
<CustomField>
    <fullName>Mike_Austin_CB_Stage__c</fullName>
    <label>Mike &amp; Austin CB Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DID Created</fullName>
            </value>
            <value>
                <fullName>Uploaded and Verified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>