force-app/main/default/objects/Opportunity/fields/Need_Analysis_Date_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Need_Analysis_Date_Stamp__c</fullName>
    <label>Need Analysis Date Stamp</label>
    <type>Date</type>
</CustomField>