force-app/main/default/objects/Opportunity/fields/Negotiation_Review__c.field-meta.xml
<CustomField>
    <fullName>Negotiation_Review__c</fullName>
    <label>Negotiation/Review</label>
    <type>Date</type>
</CustomField>