force-app/main/default/objects/Opportunity/fields/NuCard_Industry__c.field-meta.xml
<CustomField>
    <fullName>NuCard_Industry__c</fullName>
    <label>NuCard Industry</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Test-Use for Training only</fullName>
            </value>
            <value>
                <fullName>Air Duct Cleaning</fullName>
            </value>
            <value>
                <fullName>Appliance Repair</fullName>
            </value>
            <value>
                <fullName>Appliance Store</fullName>
            </value>
            <value>
                <fullName>Attorney</fullName>
            </value>
            <value>
                <fullName>Auto Detailing</fullName>
            </value>
            <value>
                <fullName>Auto Glass</fullName>
            </value>
            <value>
                <fullName>Auto Repair</fullName>
            </value>
            <value>
                <fullName>Awnings</fullName>
            </value>
            <value>
                <fullName>Bathroom Remodeling</fullName>
            </value>
            <value>
                <fullName>Bedding/Linens/Drapes</fullName>
            </value>
            <value>
                <fullName>Billiard</fullName>
            </value>
            <value>
                <fullName>Blinds/Shutters</fullName>
            </value>
            <value>
                <fullName>Cabinetry / Carpentry</fullName>
            </value>
            <value>
                <fullName>Cable/Satellite TV/Internet</fullName>
            </value>
            <value>
                <fullName>Carpet/Tile Cleaning</fullName>
            </value>
            <value>
                <fullName>Chimney Sweep</fullName>
            </value>
            <value>
                <fullName>Chiropractor</fullName>
            </value>
            <value>
                <fullName>Closet Organization</fullName>
            </value>
            <value>
                <fullName>Closet Remodel</fullName>
            </value>
            <value>
                <fullName>Computer Repair</fullName>
            </value>
            <value>
                <fullName>Computer Setup</fullName>
            </value>
            <value>
                <fullName>Custom BBQ</fullName>
            </value>
            <value>
                <fullName>Day/Med Spas</fullName>
            </value>
            <value>
                <fullName>Day Care Provider/Pre School</fullName>
            </value>
            <value>
                <fullName>Deck/Patio - Build</fullName>
            </value>
            <value>
                <fullName>Dentist</fullName>
            </value>
            <value>
                <fullName>Disaster Recovery</fullName>
            </value>
            <value>
                <fullName>Dog Grooming/Boarding</fullName>
            </value>
            <value>
                <fullName>Driveways/Repaving</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>