force-app/main/default/objects/Opportunity/fields/NuData_Price_Per_Record__c.field-meta.xml
<CustomField>
    <fullName>NuData_Price_Per_Record__c</fullName>
    <label>NuData Price Per Record</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>