force-app/main/default/objects/Opportunity/fields/nuHome__c.field-meta.xml
<CustomField>
    <fullName>nuHome__c</fullName>
    <formula>IF(   CONTAINS( Account.Name,&quot;nuHome&quot;), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>nuHome</label>
    <type>Checkbox</type>
</CustomField>