force-app/main/default/objects/Opportunity/fields/nuHome_Call_Center_Active__c.field-meta.xml
<CustomField>
    <fullName>nuHome_Call_Center_Active__c</fullName>
    <description>Part of the OB Campaign Leads Activation.  DO NOT DELETE.</description>
    <formula>OB_Campaign_Active__c = True &amp;&amp;  fCall_Center__c = &quot;nuHome&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>nuHome Call Center Active</label>
    <type>Checkbox</type>
</CustomField>