force-app/main/default/objects/Opportunity/fields/NuHome_Industry__c.field-meta.xml
<CustomField>
    <fullName>NuHome_Industry__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NuHome Industry</label>
    <referenceTo>Industry__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>