force-app/main/default/objects/Opportunity/fields/Number_Select__c.field-meta.xml
<CustomField>
    <fullName>Number_Select__c</fullName>
    <formula>if(DID__c==&quot;&quot; &amp;&amp; Forward_to_number__c &lt;&gt; &quot;&quot;, HYPERLINK(&quot;https://numberselector.nuhome.com?id=&quot;&amp;Id&amp;&quot;&amp;areaCode=&quot;&amp;Area_Code__c&amp;&quot;&quot;&amp;&quot;&amp;forwardToNumber=&quot;&amp;Forward_to_number__c, &quot;Select Number&quot;), if(DID__c==&quot;&quot; &amp;&amp; Forward_to_number__c == &quot;&quot;, &quot;Need Forward To Number&quot;, &quot;SELECTED&quot;))</formula>
    <label>Number Select</label>
    <type>Text</type>
</CustomField>