force-app/main/default/objects/Opportunity/fields/OB_Campaign_Active__c.field-meta.xml
<CustomField>
    <fullName>OB_Campaign_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Becomes active once the operational state is set to OB Campaign.</description>
    <label>OB Campaign Active</label>
    <type>Checkbox</type>
</CustomField>