force-app/main/default/objects/Opportunity/fields/OB_Campaign_Active_Date__c.field-meta.xml
<CustomField>
    <fullName>OB_Campaign_Active_Date__c</fullName>
    <label>OB Campaign Active Date</label>
    <type>Date</type>
</CustomField>