force-app/main/default/objects/Opportunity/fields/OB_Campaign_Branch__c.field-meta.xml
<CustomField>
    <fullName>OB_Campaign_Branch__c</fullName>
    <description>Branches for the OB Campaign only.  These branches will forward over when the OB Campaign in created.</description>
    <label>OB Campaign Branch</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AL-Birmingham</fullName>
            </value>
            <value>
                <fullName>AR-Fayetteville_Springdale_Rogers</fullName>
            </value>
            <value>
                <fullName>AR-Little_Rock</fullName>
            </value>
            <value>
                <fullName>AZ-Phoenix_East</fullName>
            </value>
            <value>
                <fullName>AZ-Phoenix_North</fullName>
            </value>
            <value>
                <fullName>AZ-Phoenix_West</fullName>
            </value>
            <value>
                <fullName>AZ-Tucson</fullName>
            </value>
            <value>
                <fullName>CA-Bakersfield</fullName>
            </value>
            <value>
                <fullName>CA-Fresno</fullName>
            </value>
            <value>
                <fullName>CA-Los_Angeles</fullName>
            </value>
            <value>
                <fullName>CA-Modesto</fullName>
            </value>
            <value>
                <fullName>CA-Oakland</fullName>
            </value>
            <value>
                <fullName>CA-Orange_County</fullName>
            </value>
            <value>
                <fullName>CA-Palm_Springs</fullName>
            </value>
            <value>
                <fullName>CA-Palmdale_Lancaster</fullName>
            </value>
            <value>
                <fullName>CA-Riverside</fullName>
            </value>
            <value>
                <fullName>CA-Sacramento</fullName>
            </value>
            <value>
                <fullName>CA-Sacramento_NE</fullName>
            </value>
            <value>
                <fullName>CA-San_Bernardino</fullName>
            </value>
            <value>
                <fullName>CA-San_Diego</fullName>
            </value>
            <value>
                <fullName>CA-San_Francisco</fullName>
            </value>
            <value>
                <fullName>CA-San_Jose</fullName>
            </value>
            <value>
                <fullName>CA-SF_East_Bay_North</fullName>
            </value>
            <value>
                <fullName>CA-SF_East_Bay_South</fullName>
            </value>
            <value>
                <fullName>CA-SFV_West</fullName>
            </value>
            <value>
                <fullName>CA-Stockton</fullName>
            </value>
            <value>
                <fullName>CA-Temecula</fullName>
            </value>
            <value>
                <fullName>CA-Vallejo</fullName>
            </value>
            <value>
                <fullName>CA-Ventura_Oxnard</fullName>
            </value>
            <value>
                <fullName>CA-Victorville_Barstow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>