force-app/main/default/objects/Opportunity/fields/OB_Campaign_Call_Center__c.field-meta.xml
<CustomField>
    <fullName>OB_Campaign_Call_Center__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used for the OB Campaigns.</description>
    <inlineHelpText>Used for the OB Campaigns.</inlineHelpText>
    <label>Call Center</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>OB_Campaign_Call_Center__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>OB_Campaign_Call_Center__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>