force-app/main/default/objects/Opportunity/fields/OB_Campaign_Offer_Amount__c.field-meta.xml
<CustomField>
    <fullName>OB_Campaign_Offer_Amount__c</fullName>
    <label>OB Campaign Offer Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>