force-app/main/default/objects/Opportunity/fields/OB_Campaign_Original_Activation_Date__c.field-meta.xml
<CustomField>
    <fullName>OB_Campaign_Original_Activation_Date__c</fullName>
    <description>The first time the campaign went active.</description>
    <label>OB Campaign Original Activation Date</label>
    <type>Date</type>
</CustomField>