force-app/main/default/objects/Opportunity/fields/OB_Campaign_Primary_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>OB_Campaign_Primary_Contact_Email__c</fullName>
    <description>OB Campaign primary contact email address.  Used with automation configuration.</description>
    <inlineHelpText>OB Campaign primary contact email address.</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>