force-app/main/default/objects/Opportunity/fields/OB_Campaign_Primary_Contact_First_Name__c.field-meta.xml
<CustomField>
    <fullName>OB_Campaign_Primary_Contact_First_Name__c</fullName>
    <description>OB Campaign primary contact first name.</description>
    <inlineHelpText>OB Campaign primary contact first name.</inlineHelpText>
    <label>First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>