force-app/main/default/objects/Opportunity/fields/OB_Campaign_Primary_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>OB_Campaign_Primary_Contact_Phone__c</fullName>
    <description>OB Campaign primary contact phone number.</description>
    <inlineHelpText>OB Campaign primary contact phone number.</inlineHelpText>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>