force-app/main/default/objects/Opportunity/fields/OB_Campaign_Scheduling_Paused_End_Date__c.field-meta.xml
<CustomField>
    <fullName>OB_Campaign_Scheduling_Paused_End_Date__c</fullName>
    <description>The date the client would like scheduling appointments to continue.</description>
    <label>Scheduling Paused End Date</label>
    <type>Date</type>
</CustomField>