force-app/main/default/objects/Opportunity/fields/OB_Campaign_Service__c.field-meta.xml
<CustomField>
    <fullName>OB_Campaign_Service__c</fullName>
    <label>OB Campaign Service</label>
    <length>255</length>
    <type>Text</type>
</CustomField>