force-app/main/default/objects/Opportunity/fields/OB_Campaign_Transfer_Number__c.field-meta.xml
<CustomField>
    <fullName>OB_Campaign_Transfer_Number__c</fullName>
    <label>OB Campaign Transfer Number</label>
    <type>Phone</type>
</CustomField>