force-app/main/default/objects/Opportunity/fields/OB_Campaign_US_Time_Zones__c.field-meta.xml
<CustomField>
    <fullName>OB_Campaign_US_Time_Zones__c</fullName>
    <label>OB Campaign US Time Zones</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>9-5 pm EST</fullName>
            </value>
            <value>
                <fullName>11-6 pm EST</fullName>
            </value>
            <value>
                <fullName>12-8 pm EST</fullName>
            </value>
            <value>
                <fullName>M-F 9-10 pm Sat &amp; Sun 10-6 pm EST</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>