force-app/main/default/objects/Opportunity/fields/OB_DBA_Name__c.field-meta.xml
<CustomField>
    <fullName>OB_DBA_Name__c</fullName>
    <description>The name the client would like to be used when calling leads.</description>
    <inlineHelpText>The name the client would like to be used when calling leads.</inlineHelpText>
    <label>OB DBA Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>